force-app/main/default/objects/Quota__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Quota Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>