force-app/main/default/objects/Quota__c/fields/Attainment__c.field-meta.xml
<CustomField>
    <fullName>Attainment__c</fullName>
    <label>Quota Attainment %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <visibilityPublic</visibilityPublic>
</CustomField>