force-app/main/default/objects/Quota__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <label>Period End</label>
    <required>true</required>
    <type>Date</type>
    <visibilityPublic</visibilityPublic>
</CustomField>