force-app/main/default/objects/Quota__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <label>Period Start</label>
    <required>true</required>
    <type>Date</type>
    <visibilityPublic</visibilityPublic>
</CustomField>