force-app/main/default/objects/Quota__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <required>true</required>
    <type>Lookup</type>
    <visibilityPublic</visibilityPublic>
</CustomField>